--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "postcss": "^8",
+    "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
+    "sort-classes": "npm:prettier-plugin-tailwindcss",
     "tailwindcss": "^3.4.1",
+    "tidy-imports": "npm:@trivago/prettier-plugin-sort-imports",
     "typescript": "^5"
   }
 }
