--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "next-themes": "^0.3.0",
+    "node-appwrite": "^14.1.0",
     "react": "^18",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
