--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
+    "react-use": "^17.5.1",
     "recharts": "^2.13.0",
     "server-only": "^0.0.1",
     "sonner": "^1.5.0",
