--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "next": "14.2.15",
     "next-themes": "^0.3.0",
     "node-appwrite": "^14.1.0",
+    "nuqs": "1.19.1",
     "react": "^18",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
