--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "node-appwrite": "^14.1.0",
     "nuqs": "1.19.1",
     "react": "^18",
+    "react-big-calendar": "^1.15.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
