fix typo in package info

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "nextjs",
     "appwrite",
     "appwrite-io",
-    "next-auth",
+    "appwrite-auth",
     "react-big-calendar",
     "lucide-icons",
     "react-icons",
